--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "firebase": "^4.12.1",
     "node-fetch": "^2.1.2"
   },
   "devDependencies": {
