--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
   "name": "project-mama-news",
-  "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "firebase": "^4.12.1",
@@ -16,5 +11,8 @@
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
+  },
+  "engines": {
+    "node": "9.8.0"
   }
 }
