--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "project-mama-news",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "deploy": "git push heroku HEAD:master"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
