--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.3",
     "firebase": "^4.12.1",
     "node-fetch": "^2.1.2"
   },
