--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-mama-news",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "deploy": "git push heroku HEAD:master"
   },
   "dependencies": {
@@ -10,9 +10,6 @@
     "express": "^4.16.3",
     "firebase": "^4.12.1",
     "node-fetch": "^2.1.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.17.3"
   },
   "engines": {
     "node": "9.8.0"
