--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-mama-news",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "deploy": "git push heroku HEAD:master"
   },
@@ -13,5 +14,8 @@
   },
   "engines": {
     "node": "9.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
